--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-offset-3 col-lg-offset-3 home_content">
             
             <!-- CTA Buttons-->
-            <div>
+            <div class="cta_button_area">
               <div><button class="btn waves-effect waves-light subscribe-submit">
                 <a  href="javascript:void(0)" onClick="ga('send', 'event', { eventCategory: 'AppStoreClicked', eventAction: 'gotoStore', eventLabel: 'GooglePlay', eventValue: 100});goToURL(); return false;">Download App</a>
               </button></div>
