--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
               <ul>
                 <li><a href="#hero-unit" class="visible-lg visible-md go_to_overview">Home</a></li>
                 <li><a href="#screenshots" class="visible-lg visible-md">How It Works</a></li>
+                <li class="visible-lg visible-md">
+                  <button class="btn waves-effect waves-light subscribe-submit" style="margin-top:-10px">
+                  <a  href="javascript:void(0)" onClick="ga('send', 'event', { eventCategory: 'AppStoreClicked', eventAction: 'gotoStore', eventLabel: 'GooglePlay', eventValue: 100});goToURL(); return false;">Download App</a>
+                  </button>
+                </li>
+
                 <li><div class="mobile_nav_open_button hidden-lg hidden-md"  ><a href="" id="showRight_1" ><div data-icon="&#xe2f3;" class="button_icon close_icon"></div></a></div></li>
               </ul>
             </nav>
@@ -98,7 +104,7 @@
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-offset-3 col-lg-offset-3 home_content">
             
             <!-- CTA Buttons-->
-            <div class="cta_button_area">
+            <div class="cta_button_area hidden-lg">
               <div><button class="btn waves-effect waves-light subscribe-submit">
                 <a  href="javascript:void(0)" onClick="ga('send', 'event', { eventCategory: 'AppStoreClicked', eventAction: 'gotoStore', eventLabel: 'GooglePlay', eventValue: 100});goToURL(); return false;">Download App</a>
               </button></div>
