--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <div class="container">
          <!-- CTA Buttons-->
             <div class="cta_button_area hidden-lg" style="width: 100%; margin: 200px auto 0 auto; display: block">
-              <button class="btn waves-effect waves-light subscribe-submit" style="margin: 0 auto; display: block">
-                <a  href="javascript:void(0)" onClick="ga('send', 'event', { eventCategory: 'AppStoreClicked', eventAction: 'gotoStore', eventLabel: 'GooglePlay', eventValue: 100});goToURL(); return false;">Download App</a>
+              <button class="btn waves-effect waves-light subscribe-submit" style="margin: 0 auto; display: block; height: 45px; padding: 0 60px;">
+                <a  href="javascript:void(0)" onClick="ga('send', 'event', { eventCategory: 'AppStoreClicked', eventAction: 'gotoStore', eventLabel: 'GooglePlay', eventValue: 100});goToURL(); return false;" style="color: #fff;">Download App</a>
               </button>
             </div>
             <!-- //CTA Buttons-->
