--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 align-center">
             <div class="intro content_anim25">
-              <h3>How It Works!</h3>
-              <p>CallMe4 is here to revolutionize the way you search and connect to people. No matter what your need, requirement or interest is CallMe4 searches the right people and services for you and allows you to talk to them in real time And people across the board are now just a click away from the people of their interest.</p>
+              <h3>Search People of your Interest, Need, Requirement & Call them</h3>
+              <p>CallMe4 app gives you instant access to millions of people of your interest, need or requirement and at the same time it represents you on the Internet.</p>
             </div>
           </div>
         </div>
